--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<crc-preloader></crc-preloader>
-
-<experion-rms-main></experion-rms-main>
+<!-- <crc-preloader></crc-preloader> -->
+<experion-rms-create-job></experion-rms-create-job>
+<!-- <experion-rms-main></experion-rms-main> -->
