--- a/src/app/features/create-job/create-job.component.scss
+++ b/src/app/features/create-job/create-job.component.scss
@@ -87,9 +87,6 @@ body {
     position: relative;
   }
   
-  li {
-  }
-  
   /* Page Style */
   
   .exp-l-container {
@@ -179,7 +176,7 @@ body {
     font-weight: 500;
   }
   .exp-l-content form .form-group {
-     /* margin-right: 5px; */
+     margin-right: 5px;
     }
   .bg-colored {
     background-color: #1565c0;
@@ -378,7 +375,7 @@ body {
   
   .rms-panel-grid-header__options{
     display: inline-block;
-    float: right;
+    /* float: left; */
     margin: 0;
   }
   
@@ -484,6 +481,5 @@ body {
     border-top: 1px solid #dee2e6;
     width: 10%;
   } */
-  
   
   
