--- a/src/app/features/create-job/create-job.component.html
+++ b/src/app/features/create-job/create-job.component.html
@@ -47,7 +47,7 @@
         </div>
       </section>
       <section class="exp-l-content">
-        <form style="width: 100%;"  >
+        <form style="width: 100%;" #frm="ngModel" >
 
           <div class="form-row">
             <div class="form-group col-md-4">
