--- a/src/app/features/create-job/create-job.component.html
+++ b/src/app/features/create-job/create-job.component.html
@@ -47,12 +47,12 @@
         </div>
       </section>
       <section class="exp-l-content">
-        <form style="width: 100%;" #frm >
+        <form style="width: 100%;"  #frm >
 
           <div class="form-row">
             <div class="form-group col-md-4">
               <label for="inputState" >Business Unit</label>
-              <select id="inputState" class="form-control">
+              <select id="inputStateBU" class="form-control">
                 <option *ngFor="let bu of vac?.buissnessUnit " >{{ bu }}</option>
               </select>
             </div>
