--- a/src/app/features/create-job/create-job.component.html
+++ b/src/app/features/create-job/create-job.component.html
@@ -5,13 +5,15 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <title>Experion Referrals</title>
-   <meta name="description" content="" />
+  <meta name="description" content="" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
     integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous" />
 
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap" rel="stylesheet" />
+  <!-- <link href="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.0/jquery.min.js" rel="stylesheet" /> -->
+
 
 </head>
 
@@ -39,7 +41,7 @@
   <section class="exp-l-container">
     <section class="exp-l-wrapper">
       <section class="exp-l-content-nav">
-        <div class="exp-l-content-nav-col" >
+        <div class="exp-l-content-nav-col">
           <i class="fas fa-arrow-left"></i>
         </div>
         <div class="exp-l-content-nav-col">
@@ -47,83 +49,120 @@
         </div>
       </section>
       <section class="exp-l-content">
-        <form style="width: 100%;"  #frm >
-
+        <form style="width: 100%;" class="form-signin" #frm>
           <div class="form-row">
             <div class="form-group col-md-4">
-              <label for="inputState" >Business Unit</label>
-              <select id="inputStateBU" class="form-control">
-                <option *ngFor="let bu of vac?.buissnessUnit " >{{ bu }}</option>
+              <label for="inputState">Business Unit</label>
+              <select id="inputStateBU" class="form-control" required #bu>
+                <option *ngFor="let bu of vac?.buissnessUnit ">{{ bu }}</option>
               </select>
             </div>
             <div class="form-group col-md-4">
               <label for="Role">Job Role</label>
-              <input type="text" class="form-control" id="Role" placeholder="Role" #role />
+              <input type="text" class="form-control" required id="Role" placeholder="Role" #role />
             </div>
           </div>
           <div class="form-row">
-            <div class="form-group col-md-12">
-              <label for="inputState">Primary Skills</label>
-              <div class="bootstrap-tagsinput">
-                <span *ngFor="let bu of vac?.primarySkills " class="tag label label-info">{{ bu }}<span data-role="remove"></span></span>
+            <div class="form-group col-md-12" #ps>
+              <label for="ps">Primary Skills</label>
+              <!-- <input type="text"  > -->
+              <div class="form-row">
+                <div class="form-group col-md-12" #ps>
+                  <label for="ps">Primary Skills</label>
+                  <!-- <input type="text"> -->
+                  <div>
+                    <select id="primarySkills" 
+                            class="form-control" 
+                            type="text" 
+                            #in>
+                      <option *ngFor="let bu of vac?.primarySkills " 
+                              data-role="tagsinput" 
+                              class="bootstrap-tagsinput"
+                              (onselect)="addSkill()" 
+                              id="ps">
+                        <!-- <span class="tag label label-info"> -->
+                          <!-- <span type="text" value="" data-role="tagsinput" > -->
+                          {{ bu }}
+                          <!-- <span>
+                            <input type="reset" data-role="remove">
+                          </span>
+                        </span> -->
+                      </option>
+                    </select>
+                  </div>
+                  <!-- <div> -->
+                  <div *ngFor="let b of prSkills "
+                        data-role="tagsinput" 
+                        class="bootstrap-tagsinput" 
+                        id="ps">
+                    <span class="tag label label-info">
+                      <span type="text" value="" data-role="tagsinput" >
+                        {{ b }}
+                      </span>
+                      <span>
+                        <input type="reset" data-role="remove">
+                      </span>
+                    </span>
+                  </div>
+                </div>
+                <!-- <span type="text" data-role="tagsinput"> -->
               </div>
             </div>
           </div>
-
+          <!-- </div> -->
           <div class="form-row">
             <div class="form-group col-md-2">
               <label for="inputAddress3">Experience</label>
-              <select id="inputAddress3" class="form-control">
+              <select id="experience" class="form-control" required #exp>
                 <option *ngFor="let bu of vac?.Experience ">{{ bu }}</option>
               </select>
             </div>
             <div class="form-group col-md-4">
               <label for="inputAddress2">Location</label>
-              <input type="text" class="form-control" id="location" placeholder="Location" />
+              <input type="text" class="form-control" id="location" placeholder="Location" required #loc />
             </div>
             <div class="form-group col-md-4">
               <label for="inputAddress2">End Date</label>
-              <input type="date" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor" />
+              <input type="date" class="form-control" id="edate" required placeholder="Apartment, studio, or floor"
+                #ed />
             </div>
             <div class="form-group col-md-2">
               <label for="inputAddress2">Vacancies</label>
-              <select id="inputAddress3" class="form-control">
+              <select id="vacancy" class="form-control" required #vc>
                 <option *ngFor="let bu of vac?.vacancies ">{{ bu }}</option>
               </select>
             </div>
           </div>
-
           <div class="form-row">
             <div class="form-group col-md-4">
               <label for="inputAddress3">BU Head</label>
-              <select id="inputAddress3" class="form-control">
+              <select id="bhead" class="form-control" required #bh>
                 <option *ngFor="let bu of vac?.buHead ">{{ bu }}</option>
               </select>
             </div>
             <div class="form-group col-md-4">
               <label for="inputAddress2">Hiring Manager</label>
-              <select id="inputAddress3" class="form-control">
+              <select id="HM" class="form-control" required #hm>
                 <option *ngFor="let bu of vac?.hiringManager ">{{ bu }}</option>
               </select>
             </div>
             <div class="form-group col-md-2">
               <label for="inputAddress2">Band</label>
-              <select id="inputAddress3" class="form-control">
+              <select id="bnd" class="form-control" required #bn>
                 <option *ngFor="let bu of vac?.band ">{{ bu }}</option>
               </select>
             </div>
             <div class="form-group col-md-2">
               <label for="inputAddress2">Job Description</label>
-              <input type="button" class="form-control button-link" name="Add Link" value="Add Link" id=""
-                (click)="onClick(role)" />
-              <div *ngIf="fal==1"> {{ desci }} </div>
+              <input *ngIf="fal==0" type="button" class="form-control button-link" name="Add Link" value="Add Link"
+                id="" (click)="onClick(role)" #jd />
+              <input required type="text" *ngIf="fal==1">
             </div>
           </div>
-
           <div class="form-row">
             <div class="form-group col-md-4">
               <label for="inputState">Recruiter</label>
-              <select id="inputState" class="form-control">
+              <select id="recru" class="form-control" required #rc>
                 <option *ngFor="let bu of vac?.recruiter ">{{ bu }}</option>
               </select>
             </div>
@@ -131,11 +170,11 @@
               <div class="row justify-content-end">
                 <div class="form-group col-md-3">
                   <!-- <label for="inputZip">Zip</label> -->
-                  <button type="button" class="btn erm-btn-secondary">Reset</button>
+                  <input type="reset" class="btn btn-warning" value="Reset">
                 </div>
                 <div class="form-group col-md-3">
                   <!-- <label for="inputZip">Zip</label> -->
-                  <button type="button" class="btn erm-btn-primary" (click)="onSubmit(frm)">Save</button>
+                  <button type="button" class="btn erm-btn-primary" (click)="onSubmit()">Save</button>
                 </div>
               </div>
             </div>
