--- a/src/app/features/create-job/create-job.component.scss
+++ b/src/app/features/create-job/create-job.component.scss
@@ -280,7 +280,7 @@ body {
     /* opacity: 0.26; */
   }
   
-  .bootstrap-tagsinput .tag [data-role="remove"] {
+  .tag [data-role="remove"] {
     margin-left: 8px;
     cursor: pointer;
     position: relative;
@@ -297,22 +297,25 @@ body {
     width: 14px;
     height: 14px;
   }
-  .bootstrap-tagsinput .tag [data-role="remove"]{
+  .tag [data-role="remove"]{
     font-family: "Font Awesome 5 Free";
     font-weight: 900;
     font-size: 10px;
+    content: "";
     /* display: inline-block; */
-    /* content: "\f00d"; */
+    // /* content: "\f00d"; */
   }
-  .bootstrap-tagsinput .tag [data-role="remove"]::before {
+  
+  .tag [data-role="remove"]::before {
     content: "\f00d";
     position: relative;
     top: -5px;
     right: -2px;
   
   }
-  .bootstrap-tagsinput .tag [data-role="remove"]::after {
-    content: unset;
+ .tag [data-role="remove"]::after {
+    content: "";
+    padding: 0px 2px;
   }
   
   @media screen and (max-width: 480px) {
@@ -324,7 +327,64 @@ body {
       display: inline-block;
     }
   }
-  
+  /* bootstrap-tagsinput.css file - add in local */
+
+// .bootstrap-tagsinput {
+//   background-color: #fff;
+//   border: 1px solid #ccc;
+//   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+//   display: inline-block;
+//   padding: 4px 6px;
+//   color: #555;
+//   vertical-align: middle;
+//   border-radius: 4px;
+//   max-width: 100%;
+//   line-height: 22px;
+//   cursor: text;
+// }
+// .bootstrap-tagsinput input {
+//   border: none;
+//   box-shadow: none;
+//   outline: none;
+//   background-color: transparent;
+//   padding: 0 6px;
+//   margin: 0;
+//   width: auto;
+//   max-width: inherit;
+// }
+// .bootstrap-tagsinput.form-control input::-moz-placeholder {
+//   color: #777;
+//   opacity: 1;
+// }
+// .bootstrap-tagsinput.form-control input:-ms-input-placeholder {
+//   color: #777;
+// }
+// .bootstrap-tagsinput.form-control input::-webkit-input-placeholder {
+//   color: #777;
+// }
+// .bootstrap-tagsinput input:focus {
+//   border: none;
+//   box-shadow: none;
+// }
+// .bootstrap-tagsinput .tag {
+//   margin-right: 2px;
+//   color: white;
+// }
+// .bootstrap-tagsinput .tag [data-role="remove"] {
+//   margin-left: 8px;
+//   cursor: pointer;
+// }
+// .bootstrap-tagsinput .tag [data-role="remove"]:after {
+//   content: "x";
+//   padding: 0px 2px;
+// }
+// .bootstrap-tagsinput .tag [data-role="remove"]:hover {
+//   box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
+// }
+// .bootstrap-tagsinput .tag [data-role="remove"]:hover:active {
+//   box-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+// }
+
   /* anusree */
   .rms-c-list-content-section{
     max-width: 100%;
