--- a/src/app/features/create-job/create-job.component.html
+++ b/src/app/features/create-job/create-job.component.html
@@ -49,9 +49,9 @@
         </div>
       </section>
       <section class="exp-l-content">
-        <form style="width: 100%;" class="form-signin" #frm="ngForm" [formGroup]="form">
+        <form style="width: 100%;" class="form-signin" #frm="ngForm" >
           <div class="form-row">
-            <div class="form-group col-md-4">
+            <div class="form-group col-md-4" >
               <label for="inputState">Business Unit</label>
               <select id="inputStateBU" class="form-control"  #bu>
                 <option selected disabled >Select</option>
@@ -102,8 +102,8 @@
             </div>
             <div class="form-group col-md-4">
               <label for="inputAddress2">Location</label>
-              <select type="text" class="form-control" id="location" placeholder="Location"  #loc >
-                  <option selected disabled >Select</option>
+              <select type="text" class="form-control ajax-convert-lable field-required  input-error" id="location" placeholder="Location"  #loc >
+                  <option disabled ></option>
                   <option *ngFor="let bu of vac?.location ">
                   {{ bu }}
                 </option>
@@ -144,14 +144,14 @@
             </div>
             <div class="form-group col-md-2">
               <label for="inputAddress2">Job Description</label>
-              <input *ngIf="fal==0" type="button" class="form-control button-link" name="Add Link" value="Add Link"/>
-              <input  type="url" *ngIf="fal==1" #jd>
+              <input *ngIf="fal==0" type="button" (click)="onClick()" class="form-control button-link" name="Add Link" value="Add Link"/>
+              <input type="email" *ngIf="fal==1" #jd>
             </div>
           </div>
           <div class="form-row">
             <div class="form-group col-md-4">
               <label for="inputState">Recruiter</label>
-              <input id="recru" class="form-control"  #rc>
+              <input id="recru" class="form-control" type="text" #rc>
                 <!-- <option *ngFor="let bu of vac?.recruiter ">{{ bu }}</option>
               </select> -->
             </div>
@@ -163,7 +163,7 @@
                 </div>
                 <div class="form-group col-md-3">
                   <!-- <label for="inputZip">Zip</label> -->
-                  <button type="button" [disabled]="!form.valid" class="btn erm-btn-primary" (click)="onSubmit()">Save</button>
+                  <button type="button" [disabled]="!frm.invalid && frm.touched" class="btn erm-btn-primary" (click)="onSubmit()">Save</button>
                 </div>
               </div>
             </div>
